public/css/main.css
/* ... */
  @media screen and (min-width: 40em) {
    .centered-logo {
      width: 183px;
      height: 77px;
      background-size: 183px auto; } }

@media screen and (max-width: 39.9375em) {
  .top-bar-left,
  .top-bar-right {
    width: 50%; } }

.top-bar-right li {
  display: inline-block; }

.top-bar-right ul {
  text-align: right; }

.nav-bar__cart-btn {
  width: 50px;
  height: 44px;
  background: transparent url("../images/cart-icon.svg") no-repeat center center;
  background-size: auto 44px; }
  @media screen and (min-width: 40em) {
    .nav-bar__cart-btn {
      width: 28px;
      height: 25px;
      background-size: auto 25px; } }

.top-bar {
  padding-top: 0 !important; }

.nav-bar.sticky {
  z-index: 10000;
  position: fixed;
  display: none;
  top: 0;
  left: 0;
  margin-top: 0;
  padding-top: 0;
  padding-bottom: 0;
  background: #fff;
  height: 86px;
  width: 100%;
  color: #000;
  box-shadow: 0px 5px 5px 0px rgba(50, 50, 50, 0.29); }
  .nav-bar.sticky a {
    color: #000; }
  .nav-bar.sticky .launch-nav-btn {
    height: 44px;
    padding-left: 30px;
    background-image: url("../images/nav-icon-black.svg"); }
  .nav-bar.sticky .centered-logo {
    width: 110px;
    height: 46px;
    background-image: url("../images/logo-black.svg");
    background-size: 110px auto;
    top: 0; }
  .nav-bar.sticky .nav-bar__cart-btn {
    background-image: url("../images/cart-icon-black.svg"); }
  @media screen and (min-width: 40em) {
    .nav-bar.sticky .top-bar-left {
      position: relative;
      top: 7px; }
    .nav-bar.sticky .top-bar-right {
      position: relative;
      top: 13px; } }

.nav-bar .icon-telephone {
  color: #5ec26a;
  margin-right: .3em; }

.nav-bar .menu > li > a {
  padding-left: .3em;
  padding-right: .3em; }
  @media screen and (min-width: 64em) {
    .nav-bar .menu > li > a {
      padding-left: 1em;
      padding-right: 1em; } }

@media screen and (min-width: 40em) {
  .nav-bar.sticky .cart-button-wrap {
    margin-left: 2em; }
  .nav-bar:not(.sticky) ul.menu {
    margin-right: 92px; }
  .nav-bar:not(.sticky) .cart-button-wrap {
    margin-left: 2em;
    display: inline-block;
    width: 92px;
    height: 92px;
    position: absolute;
    top: -21px;
    right: 0; }
    .nav-bar:not(.sticky) .cart-button-wrap button {
      position: absolute;
      top: 50%;
      left: 50%;
      transform: translate(-50%, -50%); }
    .nav-bar:not(.sticky) .cart-button-wrap:hover {
      background-color: #5ec26a; }
  .cart-num {
    bottom: 4px; } }

.cart-num {
  position: relative; }
  @media screen and (max-width: 39.9375em) {
    .cart-num {
      bottom: 10px;
      left: -3px;
      font-size: 20px; } }

.off-canvas {
  background: transparent;
  font-family: 'Arvo', georgia, serif; }
  .off-canvas ul {
    margin-top: 1.3em !important;
    font-size: 30px; }
  .off-canvas li + li {
    margin-top: 1em !important; }
  .off-canvas a {
    color: #000;
    line-height: 1.3; }

.product-grid__filters .button {
  display: inline-block;
  float: none;
  color: #000;
  font-size: 21px;
  background: none; }
  .product-grid__filters .button.active {
    color: #5ec26a; }
    .product-grid__filters .button.active:after {
      content: '_';
      display: inline-block;
      transform: scaleX(1.5) translateX(33%); }
  .product-grid__filters .button:focus {
    outline: 0; }

@media screen and (max-width: 39.9375em) {
  .product-grid .column + .column, .product-grid .columns + .column, .product-grid .column + .columns, .product-grid .columns + .columns {
    margin-top: 3em; } }

.xray-img img {
  left: auto;
  right: auto;
  width: 100%; }

.product-grid__more {
  margin-top: 3em;
  margin-bottom: 5em; }

.product-grid__product {
  position: relative; }
  @media screen and (min-width: 40em) {
    .product-grid__product {
      padding: 0 10%; }
      .product-grid__product:nth-of-type(n+3) {
        margin-top: 2em; } }

.product-grid__details {
  position: absolute;
  top: 0;
  left: 0;
  line-height: 15px; }
  .product-grid__details .product-grid__price--sales-price {
    color: #f90808;
    font-weight: bold; }
  .product-grid__details .product-grid__was-price {
    color: #9c9c9c; }

.product-grid__quick-view-btn {
  display: block;
  width: 40px;
  height: 40px;
  position: absolute;
  top: 0;
  right: 20px;
  background: transparent url("../images/quick-view.svg") no-repeat left center;
  background-size: 40px 40px; }
  @media screen and (min-width: 64em) {
    .product-grid__quick-view-btn {
      width: 59px;
      height: 59px;
      background-size: 59px 59px; } }

.live-chat-btn {
  position: fixed;
  bottom: 0;
  right: 30px;
  display: inline-block;
  padding: 0 15px;
  background-color: #f90808;
  height: 35px;
  line-height: 35px;
  color: #fff;
  font-size: 14px;
  z-index: 101;
  transition: background-color .2s ease-in-out; }
  .live-chat-btn:hover {
    background-color: #d50505; }
  .live-chat-btn span {
    position: relative;
    padding-left: 36px; }
    .live-chat-btn span:before {
      content: "";
      display: block;
      width: 22px;
      height: 21px;
      background: transparent url("../images/chat.svg") no-repeat left center;
      position: absolute;
      left: 0;
      top: 50%;
      margin-top: -9px; }
  @media screen and (min-width: 40em) {
    .live-chat-btn {
      right: 20px; } }

.homepage-hero {
  position: relative;
  z-index: 0;
  top: -58px; }
  .homepage-hero picture, .homepage-hero img {
    width: 100%; }
  .homepage-hero .homepage-hero-angle {
    transform: scale(1.05, 1.05); }

.homepage-hero__overlay {
  position: absolute;
  right: 0;
  bottom: 2em;
  left: 0;
  color: #fff; }
  @media screen and (min-width: 40em) and (max-width: 63.9375em) {
    .homepage-hero__overlay {
      bottom: 3em; }
      .homepage-hero__overlay h1 {
        font-size: 2.57rem; } }
  @media screen and (min-width: 64em) {
    .homepage-hero__overlay {
      bottom: 6em; } }

.homepage-hero__buy {
  margin-top: 1.5em; }
/* ... */

